@@ -22,4 +22,8 @@ export(to_pgraph)
 export(write.popgraph)
 import(ggplot2)
 import(igraph)
-import(sp)
+importFrom(sp,Line)
+importFrom(sp,Lines)
+importFrom(sp,SpatialLines)
+importFrom(sp,SpatialPoints)
+importFrom(sp,bbox)
